# AeroLog

./: .gitignore  CMakeLists.txt  README.md  dashboard.html  requirements.txt
.github/workflows/: ci.yml
analyzer/: dashboard.py  reader.py
benchmarks/: latency_test.cpp
src/: consumer  consumer.cpp  producer  producer.cpp  shm_shared.hpp  telemetry.alog
tests/: ring_buffer_test.cpp
